examples/csharp/errors/invalid-request/obj/project.nuget.cache
{
  "version": 2,
  "dgSpecHash": "88lkMWzhYZuM+80ofzQjGVP2/wJqnKxNVNxDWxeRFMvhl84WIIvo6mzRE3iCaRWHvGY80FtrGsMROPvVljYFaQ==",
  "success": true,
  "projectFilePath": "/Users/liornabat/development/projects/kubemq/clients/kubemq-a2a/examples/csharp/errors/invalid-request/InvalidRequest.csproj",
  "expectedPackageFiles": [],
  "logs": []
}